# waypoint

./: GITHUB_BUILD_GUIDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.desktop.config.ts
.github/workflows/: build-android.yml  build-desktop.yml
app/: GoalTracker.tsx  globals.css  layout.tsx  page.tsx
desktop/: index.html  main.tsx
public/: manifest.webmanifest  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: rendered-html.test.mjs
worker/: index.ts
